fix video autoplay on safari

--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Zen+Kaku+Gothic+Antique&display=swap');
 
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -9,6 +10,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html { height: 100vh; }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
